--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ body {
 .trackSpace {
     background-color: mediumspringgreen;
 }
+.trackRuby {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    top: -8px;
+}
 .trackGold, .trackVP {
     font-size: 14px;
     font-family: monospace;
@@ -219,6 +225,8 @@ button {
     font-size: 18px;
     line-height: 150%;
     max-height: calc(100vh - 300px);
+    align-items: center;
+    justify-content: center;
 }
 .msgGold {
     font-size: 26px;
