--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html {
     font-size: 24px;
 }
@@ -12,6 +11,15 @@ body {
     overflow-x: hidden;
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
+}
+#staticContainer {
+    min-width: 300px;
+    width: 100vw;
+    max-width: min(500px, 100vw);
+    min-height: 500px;
+    height: 100vh;
+    max-height: min(900px, 100vh);
+    overflow: hidden;
 }
 #mainContainer {
     display: flex;
@@ -283,7 +291,7 @@ button {
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 15px;
+    margin: 15px -10px;
 }
 .chip-selector-row, .chip-selector-item {
     align-items: center;
@@ -291,6 +299,7 @@ button {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    flex-wrap: wrap;
 }
 .chip-selector-item {
     padding: 5px;
