--- a/style.css
+++ b/style.css
@@ -107,11 +107,9 @@ body {
     height: 17px;
 }
 button {
+    position: relative;
     padding: 5px;
-    border-radius: 4px;
     display: inline-block;
-    background-color: #0E0B11;
-    border: 2px solid #29252D;
     color: white;
     cursor: pointer;
     font-weight: bold;
@@ -142,13 +140,9 @@ button {
     aspect-ratio: 1;
     min-width: 52px; /* Includes padding and border, works out to 38px */
     font-size: min(4vw, 16px);
-}
-.controlsLower {
-    margin: 8px;
-    height: 85px;
-    display: grid;
-    grid-template-columns: 80px 1fr;
-    align-items: center;
+    background-color: #0E0B11;
+    border: 2px solid #29252D;
+    border-radius: 4px;
 }
 #whiteCounter {
     color: gray;
@@ -156,10 +150,50 @@ button {
 #whiteOdds {
     color: gray;
 }
+.controlsLower {
+    margin: 8px;
+    height: 85px;
+    display: grid;
+    grid-template-columns: 70px 1fr;
+    align-items: center;
+}
+#potionBtn {
+    position: relative;
+    /* background-color: #ff3b30; */
+    height: 85px;
+    font-weight: bold;
+    font-size: 16px;
+}
+#potionBtn img {
+    height: 90px;
+    margin: -2px 1px -3px -2px;
+}
+.overlayText {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    color: white;
+}
+.outlineText {
+    text-shadow:
+        1px 1px 0 black,
+        -1px 1px 0 black,
+        1px -1px 0 black,
+        -1px -1px 0 black,
+        2px 0 0 black,
+        -2px 0 0 black,
+        0 2px 0 black,
+        0 -2px 0 black;
+}
 #drawBtn {
     width: 100%;
     height: 100%;
     font-size: 30px;
+    background-color: #0E0B11;
+    border: 2px solid #29252D;
+    border-radius: 4px;
 }
 #splashScreen {
     display: none;
