--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ button {
     height: 100%;
     width: 100%;
     background-color: transparent;
+    box-shadow:
+        0px -1px 0 black,
+        0px -2px 0 black;
 }
 .controlsUpper {
     margin: 8px;
@@ -162,7 +165,7 @@ button {
     /* background-color: #ff3b30; */
     height: 85px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
 }
 #potionBtn img {
     height: 90px;
@@ -170,7 +173,7 @@ button {
 }
 .overlayText {
     position: absolute;
-    top: 80%;
+    top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
