--- a/style.css
+++ b/style.css
@@ -31,30 +31,38 @@ body {
     height: 100vh;
     max-height: min(900px, 100vh);
     margin: auto;
-    background: #151019;
     border-radius: 8px;
+    /* background: #151019; */
+    background-image: url("ui/woodh.png");
+    background-size: cover;
 }
+
+/* ===================== Chips and Track ===================== */
 .track {
     max-width: calc(100vw - 20px);
     overflow-x: scroll;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0)), url("ui/liquid2.png");
+    background-repeat: repeat;
+    background-size: 126px 84px;
+    background-attachment: local;
+    border-top: 3px solid #0E0B11;
+    border-bottom: 3px solid #0E0B11;
     height: 64px;
     display: grid;
     grid-template-columns: repeat(54, 60px);
     gap: 10px;
     padding: 10px;
-    background-color: mediumseagreen;
 }
 .trackSpace {
-    background-color: mediumspringgreen;
+    background-image: url("ui/trackspace.png");
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .chip, .trackSpace {
+    background-size: cover;
     position: relative;
     width: 60px;
     height: 60px;
-    border: 2px solid #0E0B11;
     border-radius: 50%;
-    outline: 1px solid #0E0B11;
-    outline-offset: -5px;
     display: flex;
     flex-direction: column;
     gap: 3px;
@@ -64,13 +72,13 @@ body {
     font-weight: bold;
     font-size: 24px;
 }
-.chip {
-    box-shadow:
-        inset 0 0 0 8px rgba(0,0,0,0.5),   /* outer ring */
-        inset 0 0 0 12px rgba(0,0,0,0.3);  /* inner ring */
-    /* Promote to GPU layer for smoother zoom/animations */
-    transform: translateZ(0);
-    will-change: transform;
+.track-glow {
+  animation: glow-gold 1.5s ease-in-out infinite;
+}
+@keyframes glow-gold {
+  0%   { background-color: rgba(0, 0, 0, 0.5); }
+  50%  { background-color: rgba(255, 255, 0, 0.2); }
+  100% { background-color: rgba(0, 0, 0, 0.5); }
 }
 .trackRuby {
     position: absolute;
@@ -194,11 +202,11 @@ button {
 @property --dy { syntax: "<length>"; inherits: false; initial-value: 0px; }
 @property --scale { syntax: "<number>"; inherits: false; initial-value: 1; }
 @property --rot { syntax: "<number>"; inherits: false; initial-value: 0; }
-.cloud-vibrate { animation: vibrateAnim 400ms infinite; }
+.cloud-vibrate { animation: vibrateAnim 700ms infinite; }
 .cloud-pulse { animation: animPulseOut 400ms ease-out; }
 .cloud-vibrate.cloud-pulse {
   animation:
-    vibrateAnim 400ms infinite,
+    vibrateAnim 700ms infinite,
     animPulseOut 400ms ease-out;
 }
 @keyframes vibrateAnim {
@@ -227,7 +235,6 @@ button {
 }
 #potionBtn {
     position: relative;
-    /* background-color: #ff3b30; */
     height: 85px;
     font-weight: bold;
     font-size: 18px;
@@ -262,41 +269,14 @@ button {
     background-color: #0E0B11;
     border: 2px solid #29252D;
     border-radius: 4px;
-}
-#splashScreen {
-    display: none;
-    position: fixed;
-    top: -10%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10vh 0;
-    background: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(3px);
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-}
-.show {
-    display: flex !important;
-    flex-direction: column;
-}
-#splashHeader {
-    margin-bottom: 10px;
-}
-#splashContent {
-    text-align: center;
-    padding: 15px 10px;
-    border: 1px solid #ffffff;
-    border-radius: 12px;
-    background-color: #151019;
-    width: 330px;
-    position: relative;
-    max-height: calc(100vh - 100px);
+    /* background-image: url("images/bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; */
 }
 
-/* Confirmation Splash Screen */
-.confirm-overlay {
+/* ===================== Splash Screen ===================== */
+.splash-overlay {
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.6);
@@ -306,7 +286,7 @@ button {
     justify-content: center;
     z-index: 9999;
 }
-.confirm-box {
+.splash-box {
     background-color: #151019;
     padding: 20px;
     border: 1px solid #ffffff;
@@ -317,16 +297,17 @@ button {
     box-shadow: 0 4px 20px rgba(0,0,0,0.25);
     font-family: sans-serif;
 }
-.confirm-title {
+.splash-title {
     margin: 0;
     font-size: 24px;
 }
-.confirm-message {
-    margin-top: 10px;
+.splash-message {
     line-height: 1.4;
     overflow-y: scroll;
     -ms-overflow-style: none;
+    margin-top: 5px;
     margin-bottom: 5px;
+    padding-top: 5px;
     font-size: 18px;
     line-height: 150%;
     max-height: calc(100vh - 300px);
@@ -339,12 +320,12 @@ button {
     align-items: center;
     color: darkgray;
 }
-.confirm-buttons {
+.splash-buttons-row {
     display: flex;
     gap: 10px;
     margin-top: 20px;
 }
-.confirm-btn {
+.splash-btn {
     flex: 1;
     padding: 12px;
     font-size: 18px;
@@ -359,7 +340,7 @@ button {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
-.confirm-hold-bar {
+.splash-btn-hold-bar {
     position: absolute;
     left: 0;
     top: 0;
@@ -369,7 +350,7 @@ button {
     transition: width 0s;
 }
 
-/* Chip Selector Splash Screen */
+/* ======= Chip Selector Splash Screen ======= */
 .chip-selector {
     display: flex;
     flex-direction: column;
@@ -403,7 +384,7 @@ button {
     15% { background-color: #ff3b30; }
     100% { background-color: #252129; }
 }
-
+/* ======= Other Splash Screens ======= */
 .witch-container {
     display: flex;
     flex-direction: column;
