--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     border-bottom: 3px solid #0E0B11;
     height: 64px;
     display: grid;
-    grid-template-columns: repeat(54, 60px);
+    grid-template-columns: repeat(54, 64px);
     gap: 10px;
     padding: 10px;
 }
@@ -60,8 +60,8 @@ body {
 .chip, .trackSpace {
     background-size: cover;
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 64px;
+    height: 64px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
@@ -71,6 +71,7 @@ body {
     color: black;
     font-weight: bold;
     font-size: 24px;
+    flex-shrink: 0;
 }
 .track-glow {
   animation: glow-gold 1.5s ease-in-out infinite;
@@ -305,10 +306,12 @@ button {
     border: 1px solid #ffffff;
     border-radius: 4px;
     width: 330px;
-    max-width: 90%;
+    max-width: 80vw;
+    max-height: 80vh;
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.25);
     font-family: sans-serif;
+    overflow-y: scroll;
 }
 .splash-title {
     margin: 0;
@@ -368,14 +371,14 @@ button {
 }
 .chip-selector-row, .chip-selector-item {
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 5px;
     flex-wrap: wrap;
 }
 .chip-selector-item {
-    padding: 5px;
+    padding: 0px 5px;
     gap: 5px;
     background-color: #252129;
     border-radius: 5px;
@@ -391,6 +394,18 @@ button {
     0% { background-color: #ff3b30; }
     15% { background-color: #ff3b30; }
     100% { background-color: #252129; }
+}
+/* ======= Rules Splash Screen ======= */
+.shop-desc {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 8px 0px -4px;
+}
+.shop-desc-text {
+    font-size: 13px;
+    margin: 0px 6px;
+    flex-grow: 1;
 }
 /* ======= Other Splash Screens ======= */
 .witch-container {
